# portablecode

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  setup-engram-mock.sh  test-linux.sh  verify-transform.py
.atl/: .skill-registry.cache.json  skill-registry.md
.engram/: config.json
portablecode/: __init__.py  archive.py  cli.py  discover.py  engram.py  paths.py  transform.py  types.py
portablecode.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
